5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1671_1107.log
== TEST (2019-04-29 09:03:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
print("a")
print("b")
-- OUTPUT:
hoje eh 9.0 e o dia do futuro eh 9.0
a
b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:03:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
print("a")
print("b")
-- OUTPUT:
hoje eh 9.0 e o dia do futuro eh 9.0
a
b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:03:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
print("a")
print("b")
-- OUTPUT:
hoje eh 9.0 e o dia do futuro eh 9.0
a
b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:03:33) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
print("a")
print("b")
-- OUTPUT:
hoje eh 9.0 e o dia do futuro eh 9.0
a
b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:03:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
print("a")
print("b")
-- OUTPUT:
hoje eh 9.0 e o dia do futuro eh 9.0
a
b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:03:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
print("a")
print("b")
-- OUTPUT:
hoje eh 9.0 e o dia do futuro eh 9.0
a
b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:16:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4)
	dia = "quinta"
elif (hoje == 5)
	dia = "sexta"
elif (hoje == 6)
	dia = "sabado"
else:
	print("A entrada hoje eh invalida")
soma = hoje + futuro	
if (soma == 0)
	fut = "domingo"
	
elif (soma == 1)
	fut = "segunda"
elif (soma == 2)
	fut = "terca"
elif (soma == 3)
	fut = "quarta"
elif (soma == 4)
	fut = "quinta"
elif (soma == 5)
	fut = "sexta
elif (soma == 6)
	fut = "sabado"

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
-- ERROR:
File "XXXX", line 14
    elif (hoje == 4)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:16:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4)
	dia = "quinta"
elif (hoje == 5)
	dia = "sexta"
elif (hoje == 6)
	dia = "sabado"
else:
	print("A entrada hoje eh invalida")
soma = hoje + futuro	
if (soma == 0)
	fut = "domingo"
	
elif (soma == 1)
	fut = "segunda"
elif (soma == 2)
	fut = "terca"
elif (soma == 3)
	fut = "quarta"
elif (soma == 4)
	fut = "quinta"
elif (soma == 5)
	fut = "sexta
elif (soma == 6)
	fut = "sabado"

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
-- ERROR:
File "XXXX", line 14
    elif (hoje == 4)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:17:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida")
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta
elif (soma == 6):
	fut = "sabado"

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
-- ERROR:
File "XXXX", line 34
    fut = "sexta
               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:18:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida")
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta"
elif (soma == 6):
	fut = "sabado"

print("hoje eh", hoje, "e o dia do futuro eh", futuro)
-- OUTPUT:
A entrada hoje eh invalida
hoje eh 9.0 e o dia do futuro eh 9.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:18:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida")
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta"
elif (soma == 6):
	fut = "sabado"

print("hoje eh", dia, "e o dia do futuro eh", fut)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("hoje eh", dia, "e o dia do futuro eh", fut)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 09:18:44) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida")
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta"
elif (soma == 6):
	fut = "sabado"

print("hoje eh", dia, "e o dia do futuro eh", fut)
-- EXECUTION TIME:
0.142304
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1671/1107/main.py", line 38, in <module>
    print("hoje eh", dia, "e o dia do futuro eh", fut)
NameError: name 'dia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:19:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida")
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta"
elif (soma == 6):
	fut = "sabado"

print("hoje eh", dia, "e o dia do futuro eh", fut)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 38, in <module>
    print("hoje eh", dia, "e o dia do futuro eh", fut)
NameError: name 'dia' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:20:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida") 
	break 
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta"
elif (soma == 6):
	fut = "sabado"

print("hoje eh", dia, "e o dia do futuro eh", fut)
-- ERROR:
File "XXXX", line 22
    break 
    ^
SyntaxError: 'break' outside loop
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:20:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida") 
	break;
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta"
elif (soma == 6):
	fut = "sabado"

print("hoje eh", dia, "e o dia do futuro eh", fut)
-- ERROR:
File "XXXX", line 22
    break;
    ^
SyntaxError: 'break' outside loop
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:20:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida") 
	break;
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta"
elif (soma == 6):
	fut = "sabado"

print("hoje eh", dia, "e o dia do futuro eh", fut)
-- ERROR:
File "XXXX", line 22
    break;
    ^
SyntaxError: 'break' outside loop
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 09:21:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
hoje = float(input("Entre com o numero do dia de hoje: "))
futuro = float(input("Entre com o numero de dias apos hoje: "))
if(hoje == 0):
	dia = "domingo"
elif (hoje == 1):
	dia = "segunda"
elif (hoje == 2):
	dia = "terca"
elif (hoje == 3):
	dia = "quarta"
elif (hoje == 4):
	dia = "quinta"
elif (hoje == 5):
	dia = "sexta"
elif (hoje == 6):
	dia = "sabado"
else:
	print("A entrada hoje eh invalida") 
	return 0
soma = hoje + futuro	
if (soma == 0):
	fut = "domingo"
elif (soma == 1):
	fut = "segunda"
elif (soma == 2):
	fut = "terca"
elif (soma == 3):
	fut = "quarta"
elif (soma == 4):
	fut = "quinta"
elif (soma == 5):
	fut = "sexta"
elif (soma == 6):
	fut = "sabado"

print("hoje eh", dia, "e o dia do futuro eh", fut)
-- ERROR:
File "XXXX", line 22
    return 0
    ^
SyntaxError: 'return' outside function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
